# unbinned_unfolding

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTORS.md  GNUmakefile  History.md  LICENSE  README.md  USAGE.md  format-source  pixi.toml  setup.py  tmp.py
cmake/: ATLAS.cmake  PlainROOT.cmake  conda-toolchain.cmake  doxygen.cmake  source.cmake  testing.cmake  version.cmake
examples/: OmniFold_example.ipynb  OmniFold_python_example.ipynb  RooUnfoldExample.cxx  RooUnfoldExample.py  RooUnfoldFitExample.py  RooUnfoldFitTest.py  RooUnfoldTestHarness.icc
python/: __init__.py  omnifold.py
ref/: overflow.ref  test_2D.ref  test_3D.ref  test_correlation.ref  test_fakes.ref  test_methods.ref  test_uncertainty.ref
src/: Omnifold.cxx  Omnifold.h  RooFitUnfold.cxx  RooFitUnfold.h  RooUnfold.cxx  RooUnfold.h  RooUnfoldBayes.cxx  RooUnfoldBayes.h  RooUnfoldBinByBin.cxx  RooUnfoldBinByBin.h  RooUnfoldErrors.cxx  RooUnfoldErrors.h  RooUnfoldFitHelpers.cxx  RooUnfoldFitHelpers.h  RooUnfoldGP.cxx  RooUnfoldGP.h  RooUnfoldHelpers.cxx  RooUnfoldHelpers.h  RooUnfoldHelpers.tpp  RooUnfoldIds.cxx  RooUnfoldIds.h  RooUnfoldInvert.cxx  RooUnfoldInvert.h  RooUnfoldOmnifold.cxx  RooUnfoldOmnifold.h  RooUnfoldParms.cxx  RooUnfoldParms.h  RooUnfoldPoisson.cxx  RooUnfoldPoisson.h  RooUnfoldResponse.cxx  RooUnfoldResponse.h  RooUnfoldSvd.cxx  RooUnfoldSvd.h  RooUnfoldTH1Helpers.cxx  RooUnfoldTH1Helpers.h  RooUnfoldTUnfold.cxx  RooUnfoldTUnfold.h  RooUnfold_LinkDef.h  TSVDUnfold.cxx  TUnfold.h  (+12 more)
src/RooUnfold/: __init__.py
src/RooUnfold/TUnfold/: TUnfoldBinning.h  TUnfoldBinningXML.h  TUnfoldDensity.h  TUnfoldIterativeEM.h  TUnfoldSys.h
test/: CMakeLists.txt  RooUnfold_generate_refs.cxx  generateRef.py  test_2D.py  test_3D.py  test_bin_correlation.py  test_fakes.py  test_methods.py  test_overflow.py  test_uncertainty.py  test_utils.py
test/src/: ArgVar.h  ArgVars.cxx  ArgVars.h  RooUnfoldTest.cxx  RooUnfoldTest2D.cxx  RooUnfoldTest3D.cxx  RooUnfoldTestHarness.cxx  RooUnfoldTestHarness.h  RooUnfoldTestHarness2D.cxx  RooUnfoldTestHarness2D.h  RooUnfoldTestHarness3D.cxx  RooUnfoldTestHarness3D.h  RooUnfoldTestPdf.cxx  RooUnfoldTestPdfRooFit.cxx  RooUnfold_unit_tests.cxx  bayes_test.cxx  dbg.h  generate_test.cxx  minunit.h  response_test.cxx  unittests.h
unbinned_unfolding_paper_code/: final_gaussians.ipynb  final_jet_plots.ipynb  generate_gaussians.py  get_DNN_predictions_gaussian.py  get_DNN_predictions_jets.py  get_PET_predictions.py  modplot.py  train_BDT_gaussian.py  train_BDT_jets.py  train_DNN_gaussians.py  train_DNN_jets.py  train_PET.py
